# cursor_agent

./: .cursorrules  .gitignore  README.md  environment.yml  pyproject.toml
agent_prompts/: principal_architect.md  senior_backend_developer.md  senior_qa_manager.md
cursor_tools/: __init__.py  base.py  cli.py  example_tool.py  registry.py  weather.py
