[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursor_agent"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A Cursor agent package with self-building tools"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "certifi>=2023.11.17",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
cursor-tools = "cursor_tools.cli:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/cursor_agent"
"Bug Tracker" = "https://github.com/yourusername/cursor_agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["cursor_tools"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$' 